tweaked kitty conf

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,9 @@ include current-theme.conf
 # END_KITTY_THEME
 
 font_size 16.5
+#:opacity in and blur set like this in current-theme.conf
+#:background_opacity 0.75
+#:background_blur 32
 
 enable_audio_bell no
 #: Fonts {{{
