modules for waybar WIP

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,10 +1,14 @@
 // -*- mode: jsonc -*-
 {
     // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
+    "position": "top", // Waybar posix (top|bottom|left|right)
     "height": 40, // Waybar height (to be removed for auto height)
-    // "width": 1920, // Waybar width
+    //"width": 1920, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
+    
+    // Load Modules
+    "include": ["~/.config/waybar/modules.json"]
+
     // Choose the order of the modules
     "modules-left": [
         "hyprland/workspaces",
