--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,7 +5,13 @@
 include current-theme.conf
 # END_KITTY_THEME
 
+#font
 font_size 16.5
+font_family		MesloLGM Nerd Font Propo:style=Regular
+bold_font		MesloLGM Nerd Font Propo:style=Bold
+italic_font		MesloLGM Nerd Font Propo:style=Italic
+bold_italic_font	MesloLGM Nerd Font Propo:style=Bold Italic
+
 #:opacity in and blur set like this in current-theme.conf
 #:background_opacity 0.75
 #:background_blur 32
