--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,11 +6,11 @@ include current-theme.conf
 # END_KITTY_THEME
 
 #font
-font_size 16.5
-font_family		MesloLGM Nerd Font Propo:style=Regular
-bold_font		MesloLGM Nerd Font Propo:style=Bold
-italic_font		MesloLGM Nerd Font Propo:style=Italic
-bold_italic_font	MesloLGM Nerd Font Propo:style=Bold Italic
+font_size 17.5
+# font_family		MesloLGM Nerd Font Propo:style=Regular
+# bold_font		MesloLGM Nerd Font Propo:style=Bold
+# italic_font		MesloLGM Nerd Font Propo:style=Italic
+# bold_italic_font	MesloLGM Nerd Font Propo:style=Bold Italic
 
 #:opacity in and blur set like this in current-theme.conf
 #:background_opacity 0.75
@@ -2677,3 +2677,11 @@ enable_audio_bell no
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Source Code Pro"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
