applied theme and transparent background on neovim

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
+preload = ~/.config/backgrounds/araki1.jpg
 preload = ~/.config/backgrounds/araki2.jpg
+preload = ~/.config/backgrounds/araki3.jpg
 wallpaper = , ~/.config/backgrounds/araki2.jpg
