--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,18 +1,23 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Forest Night
 include current-theme.conf
 # END_KITTY_THEME
 
-# opacity in and blur set like this in current-theme.conf
-#:background_opacity 0.75
-#:background_blur 32
+#: opacity in and blur set like this in current-theme.conf
+background_opacity 0.80
+background_blur 32
+#background_tint 1
+#:dynamic_background_opacity no
+baackground #242423
+baackground #1e181f
+baackground #645268
+baackground #473a4a
 
-
-#font
+#:font
 font_size 17.5
-# Nerd Fonts v3.2.0
+#: Nerd Fonts v3.2.0
 
 symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 symbol_map U+f101-U+f25c nonicons
