--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,5 @@
 preload = ~/.config/backgrounds/araki1.jpg
 preload = ~/.config/backgrounds/araki2.jpg
 preload = ~/.config/backgrounds/araki3.jpg
+preload = ~/.config/backgrounds/dai_yi1.jpg
 wallpaper = , ~/.config/backgrounds/araki2.jpg
