--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2720,7 +2720,7 @@ enable_audio_bell no
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="MesloLGM Nerd Font Mono"
+font_family      family='MesloLGM Nerd Font Mono' postscript_name=MesloLGMNFM-Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
