--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ monitor=,preferred,auto@144,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = Thunar
-$menu = wofi --show drun
+$menu = wofi --conf $HOME/.configwofi/.config/wofi/config/config --style $HOME/.config/wofi/src/mocha/style.css --show drun
 
 
 #################
