--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -73,12 +73,13 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(e3c4fffc) rgba(c98afffc) 45deg
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -92,11 +93,12 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 8
+    rounding_power = 4.0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.95
 
     shadow {
         enabled = true
@@ -227,7 +229,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $SUPER_SHIFT, l, exec, hyprlock
 bind = , PRINT, exec, hyprshot -m window
 bind = shift, PRINT, exec, hyprshot -m region
-bind = $mainMod, f, fullscreen
+bind = $mainMod, F, fullscreen
+# bind = $mainMod, O, float
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -263,7 +266,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# Scroll through existing workspaces with mainMod + arrow keys
 bind = $SUPER_SHIFT, right, workspace, e+1
 bind = $SUPER_SHIFT, left, workspace, e-1
 
