--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = dwindle 
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -224,9 +224,9 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, G, togglesplit, # dwindle
 
-bind = $SUPER_SHIFT, l, exec, hyprlock
+bind = $SUPER_SHIFT, Y, exec, hyprlock
 bind = , PRINT, exec, hyprshot -m window
 bind = shift, PRINT, exec, hyprshot -m region
 bind = $mainMod, F, fullscreen
@@ -237,6 +237,12 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Move focus with mainMod + H J K L (ldur)
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, J, movefocus, d
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, L, movefocus, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -270,9 +276,25 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $SUPER_SHIFT, right, workspace, e+1
 bind = $SUPER_SHIFT, left, workspace, e-1
 
+# Scroll through existing workspaces with mainMod + H L (l-r)
+bind = $SUPER_SHIFT, H, workspace, e-1
+bind = $SUPER_SHIFT, L, workspace, e+1
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Move window with mainMod + H J K L (ldur)
+bind = $mainMod CTRL, H, movewindow, l
+bind = $mainMod CTRL, J, movewindow, d
+bind = $mainMod CTRL, K, movewindow, u
+bind = $mainMod CTRL, L, movewindow, r 
+
+# Resize window with mainMod + H J K L (ldur)
+bind = $mainMod ALT, H, resizeactive, -10 0
+bind = $mainMod ALT, J, resizeactive, 0 10
+bind = $mainMod ALT, K, resizeactive, 0 -10
+bind = $mainMod ALT, L, resizeactive, 10 0
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
