--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -291,10 +291,12 @@ bind = $mainMod CTRL, K, movewindow, u
 bind = $mainMod CTRL, L, movewindow, r 
 
 # Resize window with mainMod + H J K L (ldur)
-bind = $mainMod ALT, H, resizeactive, -10 0
-bind = $mainMod ALT, J, resizeactive, 0 10
-bind = $mainMod ALT, K, resizeactive, 0 -10
-bind = $mainMod ALT, L, resizeactive, 10 0
+bind = $mainMod ALT, H, resizeactive, -35 0
+bind = $mainMod ALT, J, resizeactive, 0 25
+bind = $mainMod ALT, K, resizeactive, 0 -25
+bind = $mainMod ALT, L, resizeactive, 25 0
+bind = Super, Minus, splitratio, -0.1 # [hidden]
+bind = Super, Equal, splitratio, +0.1 # [hidden]
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
