changed background color from kitty and edited nvim header img

--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -6,12 +6,12 @@ include current-theme.conf
 # END_KITTY_THEME
 
 #: opacity in and blur set like this in current-theme.conf
-background_opacity 0.80
+background_opacity 0.8
 background_blur 32
 #background_tint 1
 #:dynamic_background_opacity no
 baackground #242423
-baackground #1e181f
+background #1e181f
 baackground #645268
 baackground #473a4a
 
