updated kitty conf

--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -22,10 +22,10 @@ cursor_trail_decay 0.01 0.15
 #window keybinds and layout
 map alt+enter new_window_with_cwd
 map alt+c close_window
-map alt+h neighboring_window left
-map alt+l neighboring_window right
-map alt+k neighboring_window up
-map alt+j neighboring_window down
+map super+h neighboring_window left
+map super+l neighboring_window right
+map super+k neighboring_window up
+map super+j neighboring_window down
 enabled_layouts *
 
 #tab keybinds
