background, kitty config; home pc

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -2,4 +2,9 @@ preload = ~/.config/backgrounds/araki1.jpg
 preload = ~/.config/backgrounds/araki2.jpg
 preload = ~/.config/backgrounds/araki3.jpg
 preload = ~/.config/backgrounds/dai_yi1.jpg
-wallpaper = , ~/.config/backgrounds/araki2.jpg
+preload = ~/Pictures/metalheart/moisture_free_by_rizn_d13h8-fullview.jpg
+preload = ~/Pictures/metalheart/pr0x_heart_by_focalflare_djlo8x4-pre.jpg
+preload = ~/Pictures/metalheart/ventromedia_by_jackflash776_dj7cfcc-pre.jpg
+preload = ~/Pictures/metalheart/ultramarine__with_luciii_dll__by_nthercyte_diwxq51-pre.png
+wallpaper = , ~/Pictures/metalheart/pr0x_heart_by_focalflare_djlo8x4-pre.jpg
+
