--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,6 +15,12 @@ baackground #1e181f
 baackground #645268
 baackground #473a4a
 
+#tab keybinds
+map alt+shift+enter new_tab_with_cwd
+map alt+shift+c close_tab
+map alt+shift+h previous_tab
+map alt+shift+l next_tab
+
 #:font
 font_size 17.5
 #: Nerd Fonts v3.2.0
