--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -20,12 +20,13 @@ cursor_trail 1
 cursor_trail_decay 0.01 0.15
 
 #window keybinds and layout
-map alt+enter new_window_with_cwd
-map alt+c close_window
-map super+h neighboring_window left
-map super+l neighboring_window right
-map super+k neighboring_window up
-map super+j neighboring_window down
+map alt+enter	new_window_with_cwd
+map alt+c		close_window
+map super+h		neighboring_window	left
+map super+l		neighboring_window	right
+map super+k		neighboring_window	up
+map super+j		neighboring_window	down
+map	super+0		swap_with_window
 enabled_layouts *
 
 #tab keybinds
