--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,6 +15,10 @@ baackground #1e181f
 baackground #645268
 baackground #473a4a
 
+#cursor trail options
+cursor_trail 1
+cursor_trail_decay 0.01 0.15
+
 #tab keybinds
 map alt+shift+enter new_tab_with_cwd
 map alt+shift+c close_tab
