changed 42 kitty and neovim

--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -35,6 +35,9 @@ map alt+shift+c close_tab
 map alt+shift+h previous_tab
 map alt+shift+l next_tab
 
+# Bell sound
+enable_audio_bell no
+
 #Fonts
 font_family FiraCode Nerd Font Mono
 #: Fonts {{{
