--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -25,8 +25,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto@144,1
-#	                    1.250000
+monitor=eDP-1, 1920x1080@144, 0x0, 1
 
 
 ###################
