changed lazy confs

--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -10,10 +10,10 @@ background_opacity 0.8
 background_blur 32
 #background_tint 1
 #:dynamic_background_opacity no
-baackground #242423
+# baackground #242423
 background #1e181f
-baackground #645268
-baackground #473a4a
+# baackground #645268
+# baackground #473a4a
 
 #cursor trail options
 cursor_trail 1
