--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -19,6 +19,16 @@ baackground #473a4a
 cursor_trail 1
 cursor_trail_decay 0.01 0.15
 
+#window keybinds and layout
+map alt+enter	new_window_with_cwd
+map alt+c		close_window
+map alt+h		neighboring_window	left
+map alt+l		neighboring_window	right
+map alt+k		neighboring_window	up
+map alt+j		neighboring_window	down
+map	alt+0		swap_with_window
+enabled_layouts *
+
 #tab keybinds
 map alt+shift+enter new_tab_with_cwd
 map alt+shift+c close_tab
