--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,19 +1,19 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Adwaita darker
 include current-theme.conf
 # END_KITTY_THEME
 
 #: opacity in and blur set like this in current-theme.conf
-background_opacity 0.80
+background_opacity 0.60
 background_blur 32
 #background_tint 1
-#:dynamic_background_opacity no
-baackground #242423
-baackground #1e181f
-baackground #645268
-baackground #473a4a
+dynamic_background_opacity no
+# background #242423
+# baackground #1e181f
+# baackground #645268
+# baackground #473a4a
 
 #cursor trail options
 cursor_trail 1
@@ -2742,7 +2742,7 @@ enable_audio_bell no
 
 
 # BEGIN_KITTY_FONTS
-font_family      family='MesloLGM Nerd Font Mono' postscript_name=MesloLGMNFM-Regular
+font_family      family="FiraCode Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
