--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -30,7 +30,7 @@ map	super+0		swap_with_window
 enabled_layouts *
 
 #tab keybinds
-map alt+shift+enter new_tab
+map alt+shift+enter new_tab_with_cwd
 map alt+shift+c		close_tab
 map alt+shift+h		previous_tab
 map alt+shift+l		next_tab
