kitty and vimrc

--- a/42_kitty/.config/kitty/kitty.conf
+++ b/42_kitty/.config/kitty/kitty.conf
@@ -40,6 +40,10 @@ enable_audio_bell no
 
 #Fonts
 font_family FiraCode Nerd Font Mono
+
+#scrollbar
+scrollbar_jump_on_click yes
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
